@@ -24,10 +24,10 @@
 
 int main(int argc, char* argv[]) {
   /* exec sql begin declare section */
-     
+       
   
 #line 9 "show.pgc"
- char  var [ 25 ]    ;
+ char  var [ 25 ]   = "public" ;
 /* exec sql end declare section */
 #line 10 "show.pgc"
 
@@ -44,7 +44,9 @@ int main(int argc, char* argv[]) {
 #line 16 "show.pgc"
 
 
-  { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set search_path to 'public'", ECPGt_EOIT, ECPGt_EORT);
+  { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set search_path to $0", 
+	ECPGt_char,(var),(long)25,(long)1,(25)*sizeof(char), 
+	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EOIT, ECPGt_EORT);
 #line 18 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
@@ -66,7 +68,7 @@ if (sqlca.sqlcode < 0) sqlprint();}
 
   printf("Var: Search path: %s\n", var);
 
-  { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set standard_conforming_strings to off", ECPGt_EOIT, ECPGt_EORT);
+  { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set search_path to 'public'", ECPGt_EOIT, ECPGt_EORT);
 #line 22 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
@@ -74,72 +76,94 @@ if (sqlca.sqlwarn[0] == 'W') sqlprint();
 
 if (sqlca.sqlcode < 0) sqlprint();}
 #line 22 "show.pgc"
+
+  { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "show search_path", ECPGt_EOIT, 
+	ECPGt_char,(var),(long)25,(long)1,(25)*sizeof(char), 
+	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EORT);
+#line 23 "show.pgc"
+
+if (sqlca.sqlwarn[0] == 'W') sqlprint();
+#line 23 "show.pgc"
+
+if (sqlca.sqlcode < 0) sqlprint();}
+#line 23 "show.pgc"
+
+  printf("Var: Search path: %s\n", var);
+
+  { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set standard_conforming_strings to off", ECPGt_EOIT, ECPGt_EORT);
+#line 26 "show.pgc"
+
+if (sqlca.sqlwarn[0] == 'W') sqlprint();
+#line 26 "show.pgc"
+
+if (sqlca.sqlcode < 0) sqlprint();}
+#line 26 "show.pgc"
 
   { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "show standard_conforming_strings", ECPGt_EOIT, 
 	ECPGt_char,(var),(long)25,(long)1,(25)*sizeof(char), 
 	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EORT);
-#line 23 "show.pgc"
+#line 27 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
-#line 23 "show.pgc"
+#line 27 "show.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 23 "show.pgc"
+#line 27 "show.pgc"
 
   printf("Var: Standard conforming strings: %s\n", var);
 
   { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set time zone PST8PDT", ECPGt_EOIT, ECPGt_EORT);
-#line 26 "show.pgc"
+#line 30 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
-#line 26 "show.pgc"
+#line 30 "show.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 26 "show.pgc"
+#line 30 "show.pgc"
 
   { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "show time zone", ECPGt_EOIT, 
 	ECPGt_char,(var),(long)25,(long)1,(25)*sizeof(char), 
 	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EORT);
-#line 27 "show.pgc"
+#line 31 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
-#line 27 "show.pgc"
+#line 31 "show.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 27 "show.pgc"
+#line 31 "show.pgc"
 
   printf("Time Zone: %s\n", var);
 
   { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "set transaction isolation level read committed", ECPGt_EOIT, ECPGt_EORT);
-#line 30 "show.pgc"
+#line 34 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
-#line 30 "show.pgc"
+#line 34 "show.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 30 "show.pgc"
+#line 34 "show.pgc"
 
   { ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "show transaction isolation level", ECPGt_EOIT, 
 	ECPGt_char,(var),(long)25,(long)1,(25)*sizeof(char), 
 	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EORT);
-#line 31 "show.pgc"
+#line 35 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
-#line 31 "show.pgc"
+#line 35 "show.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 31 "show.pgc"
+#line 35 "show.pgc"
 
   printf("Transaction isolation level: %s\n", var);
 
   { ECPGdisconnect(__LINE__, "ALL");
-#line 34 "show.pgc"
+#line 38 "show.pgc"
 
 if (sqlca.sqlwarn[0] == 'W') sqlprint();
-#line 34 "show.pgc"
+#line 38 "show.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 34 "show.pgc"
+#line 38 "show.pgc"
 
 
   return 0;
